<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tinyspline_ros</name>
  <version>0.0.1</version>
  <description>The tinyspline_ros package</description>
  <maintainer email="pryre@todo.todo">pryre</maintainer>
  <maintainer email="ggeesara@gmail.com">Geesara</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
